net: loopback: fix a dst refcounting issue

--- a/exe/ImageConvert/ImageConvert.props
+++ b/exe/ImageConvert/ImageConvert.props
@@ -9,4 +9,6 @@
 		<ClCompile>
 			<AdditionalIncludeDirectories>%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
 		</ClCompile>
-	<
+	</ItemDefinitionGroup>
+	<ItemGroup />
+</Project>
