--- a/exe/MediaPlayer/MediaPlayer.vcxproj
+++ b/exe/MediaPlayer/MediaPlayer.vcxproj
@@ -350,4 +350,19 @@ copy $(QTDIR)\lib\QtCore4.dll $(IPL)\export\$(Platform)-$(Configuration)\QtCore4
       <Project>{ac6c45bb-2d1d-4b13-9592-e27bb53bcad7}</Project>
     </ProjectReference>
     <ProjectReference Include="..\..\lib\AAL_Qt\AAL_Qt.vcxproj">
-      <Project>{38fed874-134a-4723-b98a-15b3580
+      <Project>{38fed874-134a-4723-b98a-15b3580ccf3a}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\..\lib\ACore\ACore.vcxproj">
+      <Project>{4283e1f3-23a1-409f-96ce-9c8984740455}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\..\lib\AIL\AIL.vcxproj">
+      <Project>{a09d1519-dc15-45cb-9972-958996280ccf}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\..\lib\AIL_Qt\AIL_Qt.vcxproj">
+      <Project>{bb5e9e03-c097-451a-8918-b48f14010523}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\..\lib\AML\AML.vcxproj">
+      <Project>{8f538276-06ad-498e-b1f3-d789ba7e9300}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\..\lib\AML_ffmpeg\AML_ffmpeg.vcxproj">
+      <Project>{9
