--- a/exe/QPaint/QPaint.vcxproj.filters
+++ b/exe/QPaint/QPaint.vcxproj.filters
@@ -47,4 +47,24 @@
     <Filter Include="Generated Files\Release_Win32">
       <UniqueIdentifier>{7561566f-7f61-43d4-84a5-996f4eb37100}</UniqueIdentifier>
       <Extensions>cpp;moc</Extensions>
-      <
+      <SourceControlFiles>False</SourceControlFiles>
+    </Filter>
+    <Filter Include="Generated Files\Release_x64">
+      <UniqueIdentifier>{7f4ad873-9a0c-4b5c-b1a8-3594a07284b4}</UniqueIdentifier>
+      <Extensions>cpp;moc</Extensions>
+      <SourceControlFiles>False</SourceControlFiles>
+    </Filter>
+    <Filter Include="Resource Files">
+      <UniqueIdentifier>{4ed36250-4b95-491b-9a58-eaba8480dcbf}</UniqueIdentifier>
+    </Filter>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="src\ImageWindow.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\MorphologicalDialog.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompil
