--- a/exe/QPaint/QPaint.vcxproj.filters
+++ b/exe/QPaint/QPaint.vcxproj.filters
@@ -83,4 +83,19 @@
     <ClCompile Include="GeneratedFiles\Win32-Release-DLL\moc_ImageWindow.cpp">
       <Filter>Generated Files\Release-DLL_Win32</Filter>
     </ClCompile>
-    <ClCompile Include="GeneratedFiles\x6
+    <ClCompile Include="GeneratedFiles\x64-Release-DLL\moc_ImageWindow.cpp">
+      <Filter>Generated Files\Release-DLL_x64</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Win32-Release\moc_ImageWindow.cpp">
+      <Filter>Generated Files\Release_Win32</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\x64-Release\moc_ImageWindow.cpp">
+      <Filter>Generated Files\Release_x64</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Win32-Debug-DLL\moc_MorphologicalDialog.cpp">
+      <Filter>Generated Files\Debug-DLL_Win32</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\x64-Debug-DLL\moc_MorphologicalDialog.cpp">
+      <Filter>Generated Files\Debug-DLL_x64</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Win32-Debug\moc_MorphologicalDialog.cpp"
