--- a/lib/AAL_Qt/AAL_Qt.vcxproj.filters
+++ b/lib/AAL_Qt/AAL_Qt.vcxproj.filters
@@ -1,4 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-  
+    <Filter Include="Generated Files">
+      <UniqueIdentifier>{98EAFEBA-A791-4BB8-BE03-267B4CA1BAED}</UniqueIdentifier>
+      <Extensions>moc;h;cpp</Extensions>
+      <SourceControlFiles>False</SourceControlFiles>
+    </Filter>
+    <Filter Include="Generated Files\Debug-DLL_Win32">
+      <UniqueIdentifier>{0547CC9B-7588-4795-8867-8D16F951D205}</UniqueIdentifier>
+      <Extensions>cpp;moc</Extensions>
+      <SourceControlFiles>False</SourceControlFiles>
+    </Filter>
+    <Filter Include="Generated Files\Debug-DLL_x64">
+      <UniqueIdentifier>{072C5FE7-4AAD-4055-BB75-8052F4221A34}</UniqueIdentifier>
+      <Extensions>cpp;moc</Extensions>
+      <SourceControlFiles>False</SourceControlFiles>
+    </Filter>
+ 
