--- a/lib/AAL_Qt/AAL_Qt.vcxproj.filters
+++ b/lib/AAL_Qt/AAL_Qt.vcxproj.filters
@@ -31,4 +31,20 @@
       <Extensions>cpp;moc</Extensions>
       <SourceControlFiles>False</SourceControlFiles>
     </Filter>
-    <Filter Include="Generated Files\Release-DLL
+    <Filter Include="Generated Files\Release-DLL_x64">
+      <UniqueIdentifier>{2E74148A-03EA-4970-A211-2316AF13BBEC}</UniqueIdentifier>
+      <Extensions>cpp;moc</Extensions>
+      <SourceControlFiles>False</SourceControlFiles>
+    </Filter>
+    <Filter Include="Generated Files\Release_Win32">
+      <UniqueIdentifier>{78D93507-54E4-412B-9EEE-42DD33C4F424}</UniqueIdentifier>
+      <Extensions>cpp;moc</Extensions>
+      <SourceControlFiles>False</SourceControlFiles>
+    </Filter>
+    <Filter Include="Generated Files\Release_x64">
+      <UniqueIdentifier>{1B2946DB-20A5-4ACF-AD90-683980E2375A}</UniqueIdentifier>
+      <Extensions>cpp;moc</Extensions>
+      <SourceControlFiles>False</SourceControlFiles>
+    </Filter>
+    <Filter Include="Audio">
+      <UniqueIdentifier>{33632da
