--- a/lib/AAL_Qt/AAL_Qt.vcxproj.filters
+++ b/lib/AAL_Qt/AAL_Qt.vcxproj.filters
@@ -66,4 +66,19 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="
+    <ClCompile Include="GeneratedFiles\Win32-Debug-DLL\moc_AudioQtDevice.cpp">
+      <Filter>Generated Files\Debug-DLL_Win32</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\x64-Debug-DLL\moc_AudioQtDevice.cpp">
+      <Filter>Generated Files\Debug-DLL_x64</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Win32-Debug\moc_AudioQtDevice.cpp">
+      <Filter>Generated Files\Debug_Win32</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\x64-Debug\moc_AudioQtDevice.cpp">
+      <Filter>Generated Files\Debug_x64</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Win32-Release-DLL\moc_AudioQtDevice.cpp">
+      <Filter>Generated Files\Release-DLL_Win32</Filter>
+    </ClCompile>
+    <ClCompile Include="Generat
